# lib3h_simchat

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
scripts/nix/: config.nix
src/: lib.rs  main.rs  simchat.rs
src/lib3h_simchat/: handle_chat_event.rs  mod.rs
src/lib3h_simchat/tests/: mock_engine.rs
