[package]
name = "lib3h_simchat"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h simulation test framework"
keywords = ["holochain", "holo"]
categories = ["development-tools::testing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_sim_chat"
repository = "https://github.com/holochain/lib3h"

[dependencies]
crossbeam-channel = "=0.3.8"
linefeed = "=0.6.0"
base64 = "=0.10.1"
regex = "=1.1.2"
lib3h_protocol = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_sodium = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_crypto_api = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_zombie_actor = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
lib3h_tracing = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
detach = { "git" = "https://github.com/holochain/lib3h", branch = "simchat-integration" }
url = "=1.7.2"
lazy_static = "=1.2.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = "=1.0.39"
chrono = "=0.4.6"
colored = "=1.8.0"
structopt = "=0.3.1"

[lib]
name = "lib3h_sim_chat"
path = "src/lib.rs"

[[bin]]
name = "lib3h_sim_chat"
path = "src/main.rs"
